# CleaningRobot

./: OneMotorAtATime.py  OneMotorFwd.py  QUICKSTART.md  README.md  cleanest.py  generate_project_snapshot.sh  sequence_test_general.py  serial_simple_ctrl.py  viewer.html
docker/: Dockerfile  docker-compose.yml
new_motor_scipts/: PID_control.py  README.md  all_forward_then_backward.py
scripts/: entrypoint.sh  record_slam_bag.sh
scripts/motor_test_scipts/: average_velocity_control.py  encoder_diagnostic-READONLY.py  encoder_diagnostic_MOVING.py  nav2_compatible_velocity_controller.py
src/arm_bridge/: package.xml  setup.py
src/arm_bridge/arm_bridge/: arm_bridge_node.py
src/behavior_manager/: package.xml  setup.py
src/behavior_manager_interfaces/: package.xml
src/clothes_perception/: setup.cfg  setup.py
src/robot_bringup/: package.xml
src/robot_bringup/config/: nav2_params.yaml
src/robot_bringup/launch/: robot_bringup.launch.py
src/robot_bringup/urdf/: robot.urdf.xacro
src/sock_perception/: package.xml  setup.cfg  setup.py
tests/: test_detect_mode_startup.py  test_publishers_at_startup.py  test_slam_mode_startup.py
vision_production/: .gitignore  QUICKSTART.md  README.md  SLAM_INTEGRATION.md  SLAM_VISUALIZATION.md
vision_production/docker/: Dockerfile  docker-compose.yml
vision_production/launch/: vision_bringup.launch.py
vision_production/models/: .gitkeep
vision_production/scripts/: build.sh  entrypoint.sh  generate_checksums.sh  show_project_structure.sh  test_slam_viewer.sh  validate_graph.sh  verify_slam.sh
(+24 files in other folders)
