<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>1.0.0</version>
  <description>Top-level bringup for clothes-collecting robot</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>isaac_ros_visual_slam</exec_depend>
  <exec_depend>isaac_ros_yolov8</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>clothes_perception</exec_depend>
  <exec_depend>behavior_manager</exec_depend>
  <exec_depend>arm_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
